--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 8ba6769
-	trim = 
-	trimbase = 
+	base = 08e33fd
+	trim = mesh_msgs_hdf5
+	trimbase = 8ba6769
