--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = ee15c17
-	trim = 
-	trimbase = 
+	base = 8f9c75f
+	trim = mesh_msgs_conversions
+	trimbase = ee15c17
