--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 71309d6
-	trim = 
-	trimbase = 
+	base = 79326d2
+	trim = mesh_msgs
+	trimbase = 71309d6
