--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 7173b9c
-	trim = 
-	trimbase = 
+	base = 65d66ba
+	trim = mesh_tools
+	trimbase = 7173b9c
