--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 4c98f6d
-	trim = 
-	trimbase = 
+	base = 8f87af6
+	trim = label_manager
+	trimbase = 4c98f6d
