--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 35ac4ef
-	trim = 
-	trimbase = 
+	base = d3f49fc
+	trim = hdf5_map_io
+	trimbase = 35ac4ef
