--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 71512a2
-	trim = 
-	trimbase = 
+	base = cd51ecd
+	trim = rviz_mesh_plugin
+	trimbase = 71512a2
