--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 2c1c6f3
-	trim = 
-	trimbase = 
+	base = c2dd1c1
+	trim = mesh_msgs_transform
+	trimbase = 2c1c6f3
