--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 310293e
-	trim = 
-	trimbase = 
+	base = 5dd36a5
+	trim = rviz_map_plugin
+	trimbase = 310293e
