--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 0424f89
+	base = e2b281d
 	trim = mesh_msgs_hdf5
-	trimbase = 
+	trimbase = 0424f89
