--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 0222313
+	base = ac31b1d
 	trim = mesh_msgs_conversions
-	trimbase = 
+	trimbase = 0222313
