--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = c48655a
+	base = 3636620
 	trim = mesh_msgs
-	trimbase = 
+	trimbase = c48655a
