--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = e5947d1
+	base = e97d802
 	trim = mesh_tools
-	trimbase = 
+	trimbase = e5947d1
