--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = db37963
+	base = 4af292d
 	trim = label_manager
-	trimbase = 
+	trimbase = db37963
