--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 3929d66
+	base = 3ee89b2
 	trim = hdf5_map_io
-	trimbase = 
+	trimbase = 3929d66
