--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 73809e7
+	base = 78a5879
 	trim = rviz_mesh_plugin
-	trimbase = 
+	trimbase = 73809e7
