--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 25bd7bd
+	base = 62d67e1
 	trim = mesh_msgs_transform
-	trimbase = 
+	trimbase = 25bd7bd
