--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e606b69
-	base = 265d4be
+	base = f873cbd
 	trim = rviz_map_plugin
-	trimbase = 
+	trimbase = 265d4be
