--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/hdf5_map_io
-	previous = 
-	base = 3ee89b2
+	previous = 3ee89b2
+	base = 352d9ef
 	trim = 
 	trimbase = 
