--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/hdf5_map_io
-	previous = 
-	base = 71e8254
+	previous = 71e8254
+	base = c9d0db8
 	trim = 
 	trimbase = 
