--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/mesh_msgs_conversions
-	previous = 
-	base = ac31b1d
+	previous = ac31b1d
+	base = 33d6bfa
 	trim = 
 	trimbase = 
