--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/mesh_msgs_conversions
-	previous = 
-	base = b47118d
+	previous = b47118d
+	base = 781baf7
 	trim = 
 	trimbase = 
