--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/rviz_mesh_plugin
-	previous = 
-	base = 78a5879
+	previous = 78a5879
+	base = b1e5557
 	trim = 
 	trimbase = 
