--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/rviz_mesh_plugin
-	previous = 
-	base = 247cbc6
+	previous = 247cbc6
+	base = cfee153
 	trim = 
 	trimbase = 
