--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/rviz_map_plugin
-	previous = 
-	base = f873cbd
+	previous = f873cbd
+	base = 2945277
 	trim = 
 	trimbase = 
