--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/rviz_map_plugin
-	previous = 
-	base = bec2fef
+	previous = bec2fef
+	base = 387b062
 	trim = 
 	trimbase = 
