--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/mesh_tools
-	previous = 
-	base = e97d802
+	previous = e97d802
+	base = 9aafec5
 	trim = 
 	trimbase = 
