--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/mesh_tools
-	previous = 
-	base = 00c931a
+	previous = 00c931a
+	base = cc28ea8
 	trim = 
 	trimbase = 
