--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/label_manager
-	previous = 
-	base = 4af292d
+	previous = 4af292d
+	base = 042f662
 	trim = 
 	trimbase = 
