--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/label_manager
-	previous = 
-	base = 1879afb
+	previous = 1879afb
+	base = cbf9358
 	trim = 
 	trimbase = 
