--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/mesh_msgs_transform
-	previous = 
-	base = 62d67e1
+	previous = 62d67e1
+	base = dc5ab6c
 	trim = 
 	trimbase = 
