--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/mesh_msgs_transform
-	previous = 
-	base = 8b11cd5
+	previous = 8b11cd5
+	base = 3c56f7a
 	trim = 
 	trimbase = 
