--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/mesh_msgs_hdf5
-	previous = 
-	base = e2b281d
+	previous = e2b281d
+	base = a6075fc
 	trim = 
 	trimbase = 
