--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/mesh_msgs_hdf5
-	previous = 
-	base = 65e35f6
+	previous = 65e35f6
+	base = 4bc3517
 	trim = 
 	trimbase = 
