--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/nr-noetic/mesh_msgs
-	previous = 
-	base = 3636620
+	previous = 3636620
+	base = 8bda405
 	trim = 
 	trimbase = 
