--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/nr-noetic/mesh_msgs
-	previous = 
-	base = b8cdb6b
+	previous = b8cdb6b
+	base = 83efb67
 	trim = 
 	trimbase = 
